--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Comentarios de artículo habilitados
 article-display-style=Estilo de presentación del artículo
 article-id=Identificador del artículo
 article-increment-priority-enabled=Prioridad de incremento de artículo habilitada
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Artículo o carpeta
 article-updated-email=Correo-e de artículo actualizado
 article-version=Versión del artículo
