--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Artikli kommentaarid on lubatud (Automatic Translation)
 article-display-style=Artikli kuvamislaad (Automatic Translation)
 article-id=Artikli ID (Automatic Translation)
 article-increment-priority-enabled=Artikli juurdekasvu prioriteet on lubatud (Automatic Translation)
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Artikkel või kaust (Automatic Translation)
 article-updated-email=Artikli värskendatud e-post (Automatic Translation)
 article-version=Artikli versioon (Automatic Translation)
