--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Artikkelin Kommentointi Käytössä
 article-display-style=Artikkelin näyttötyyli
 article-id=Artikkeli ID
 article-increment-priority-enabled=Artikkelin Lisäys Prioriteetti Käytössä
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Artikkeli tai kansio
 article-updated-email=Artikkelin päivitetty sähköposti
 article-version=Artikkelin Versio
