--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Article Comments Enabled (Automatic Copy)
 article-display-style=Estilo de vista do artigo
 article-id=ID do artigo
 article-increment-priority-enabled=Article Increment Priority Enabled (Automatic Copy)
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Article or Folder (Automatic Copy)
 article-updated-email=Email actualizado no artigo
 article-version=Article Version (Automatic Copy)
