--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=תגובות למאמרים מופעלות
 article-display-style=סגנון תצוגת המאמר
 article-id=מזהה מאמר
 article-increment-priority-enabled=הגדלת עדיפות המאמר הופעלה
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=מאמר או תיקייה
 article-updated-email=דוא"ל מעודכן של המאמר
 article-version=גירסת מאמר (Automatic Translation)
