--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=記事のコメントを有効にする
 article-display-style=記事の表示形式
 article-id=Article ID
 article-increment-priority-enabled=記事インクリメント優先度を有効にする
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=記事もしくはフォルダ
 article-updated-email=記事のメールアドレスが更新されました。
 article-version=記事バージョン
