--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Article Comments Enabled (Automatic Copy)
 article-display-style=Article Display Style (Automatic Copy)
 article-id=Artikel ID
 article-increment-priority-enabled=Article Increment Priority Enabled (Automatic Copy)
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Article or Folder (Automatic Copy)
 article-updated-email=Article Updated Email (Automatic Copy)
 article-version=Article Version (Automatic Copy)
