--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Comentários do Artigo Habilitados
 article-display-style=Estilo de Exibição do Artigo
 article-id=ID do Artigo
 article-increment-priority-enabled=Prioridade de incremento do artigo habilitado
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Artigo ou Pasta
 article-updated-email=Email de Artigo Atualizado
 article-version=Versão de Artigo
