--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Komentáre k článku povolené (Automatic Translation)
 article-display-style=Štýl zobrazenia článku
 article-id=ID článku
 article-increment-priority-enabled=Povolená priorita prírastku článku (Automatic Translation)
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Článok alebo priečinok
 article-updated-email=E-mail o aktualizácii článku
 article-version=Verzia článku (Automatic Translation)
