--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Article Comments Enabled (Automatic Copy)
 article-display-style=Чланак Прикажи Стил
 article-id=Article ID (Automatic Copy)
 article-increment-priority-enabled=Article Increment Priority Enabled (Automatic Copy)
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Article or Folder (Automatic Copy)
 article-updated-email=Чланак измењен Емејл
 article-version=Article Version (Automatic Copy)
