--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1769,7 +1769,7 @@ article-comments-enabled=Cikk hozzászólások engedélyezve
 article-display-style=Cikk megjelenési stílusa
 article-id=Cikk ID
 article-increment-priority-enabled=Cikk növekmény prioritása engedélyezve
-article-is-not-displayable=Article is not displayable (Automatic Copy)
+article-is-not-displayable=Article is not displayable. (Automatic Copy)
 article-or-folder=Cikk vagy mappa
 article-updated-email=Frissített e-mail cikk
 article-version=Cikk verziója
