--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=URL canónica personalizada
 custom-color=Color personalizado
 custom-contact-mapping=Asignación personalizada del contacto
 custom-control=Control personalizado
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Color de borde de control personalizado
 custom-control-disabled-border-color=Color de borde de control personalizado deshabilitado
 custom-control-hover-color=Color de control personalizado al mantener
