--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Mukautettu Kanoninen URL
 custom-color=Oma väri
 custom-contact-mapping=Henkilön yhteystietojen mukautettujen kenttien yhdistäminen
 custom-control=Mukautettu hallinta
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Mukautettu hallinta reunan väri
 custom-control-disabled-border-color=Mukautettu hallinta pois käytöstä reunan väri
 custom-control-hover-color=Mukautettu hallinta osoittaminen väri
