--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=URL canonique personnalisée
 custom-color=Couleur personnalisée
 custom-contact-mapping=Mappage de contact personalisé
 custom-control=Contrôle personnalisé
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Couleur de bordure de contrôle personnalisé
 custom-control-disabled-border-color=Couleur de bordure désactivée de contrôle personnalisé
 custom-control-hover-color=Couleur de survol de contrôle personnalisé
