--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Egyéni kanonikus URL
 custom-color=Egyedi szín
 custom-contact-mapping=Egyéni kapcsolat összerendelés
 custom-control=Egyéni vezérlőelem
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Egyéni vezérlőelem szegélyszíne
 custom-control-disabled-border-color=Egyéni kikapcsolt vezérlőelem szegélyszíne
 custom-control-hover-color=Egyéni vezérlőelem rámutatás színe
