--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=カスタム正規化URL
 custom-color=カスタムカラー
 custom-contact-mapping=連絡先カスタムマッピング
 custom-control=カスタムコントロール
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=カスタムコントロールの枠線の色
 custom-control-disabled-border-color=カスタムコントロールの枠線の色 (無効な場合)
 custom-control-hover-color=カスタムコントロールのホバー色
