--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Aangepaste canonieke URL
 custom-color=Aangepaste kleur
 custom-contact-mapping=Aangepaste contactindeling
 custom-control=Aangepast besturingselement
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Randkleur aangepast besturingselement
 custom-control-disabled-border-color=Randkleur aangepast besturingselement uitgeschakeld
 custom-control-hover-color=Kleur bij aanwijzen aangepast besturingselement
