--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=URL canônica personalizada
 custom-color=Cor customizada
 custom-contact-mapping=Mapeamento Customizado do Contato
 custom-control=Controle personalizado
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Cor da borda de controle personalizada
 custom-control-disabled-border-color=Cor da borda do controle personalizado desativada
 custom-control-hover-color=Cor em foco de controle personalizada
