--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=自定义规范 URL
 custom-color=自定义颜色
 custom-contact-mapping=自定义联系人映射
 custom-control=自定义控件
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=自定义控件边框颜色
 custom-control-disabled-border-color=自定义控件禁用边框颜色
 custom-control-hover-color=自定义控件悬停颜色
