--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=عنوان URL مخصص متعارف عليه
 custom-color=لون مخصّص
 custom-contact-mapping=تعيين جهة اتصال مخصصة
 custom-control=تحكم مخصص
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=لون حد التحكم المخصص
 custom-control-disabled-border-color=لون حد معطل للتحكم المخصص
 custom-control-hover-color=لون التحليق لعنصر تحكم مخصص
