--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=URL canònic personalitzat
 custom-color=Color personalitzat
 custom-contact-mapping=Assignació personalitzada de contacte
 custom-control=Control personalitzat
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Color de vora de control personalitzat
 custom-control-disabled-border-color=Color de vora desactivada de control personalitzat
 custom-control-hover-color=Color de control flotant personalitzat
