--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Brugerdefineret kanonisk URL-adresse (Automatic Translation
 custom-color=Custom Color (Automatic Copy)
 custom-contact-mapping=Tilknytning af brugerdefinerede kontaktpersoner (Automatic Translation)
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
