--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Benutzerdefinierte kanonische URL
 custom-color=Benutzerdefinierte Farbe
 custom-contact-mapping=Benutzerdefinierte Kontaktzuordnung
 custom-control=Benutzerdefiniertes Steuerelement
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Benutzerdefiniertes Steuerelement Rahmenfarbe
 custom-control-disabled-border-color=Benutzerdefiniertes Steuerelement Deaktiviert Rahmenfarbe
 custom-control-hover-color=Benutzerdefiniertes Steuerelement Hover Farbe
