--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Custom Canonical URL
 custom-color=Custom Color
 custom-contact-mapping=Custom Contact Mapping
 custom-control=Custom Control
+custom-control-background-color=Custom Control Background Color
 custom-control-border-color=Custom Control Border Color
 custom-control-disabled-border-color=Custom Control Disabled Border Color
 custom-control-hover-color=Custom Control Hover Color
