--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=URL canonique personnalisée
 custom-color=Couleur personnalisée
 custom-contact-mapping=Mappage de contact personalisé
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
