--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -4317,6 +4317,7 @@ custom-canonical-url=URL canonico personalizzato (Automatic Translation)
 custom-color=Colore Personalizzato
 custom-contact-mapping=Mappatura Dati di Contatto Personalizzata
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
