--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=사용자 지정 정식 URL (Automatic Translation)
 custom-color=주문 군기
 custom-contact-mapping=사용자 지정 연락처 매핑 (Automatic Translation)
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
