--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Pasirinktinis kanoninis URL (Automatic Translation)
 custom-color=Pasirinktinė spalva (Automatic Translation)
 custom-contact-mapping=Pasirinktinis kontaktų susiejimas (Automatic Translation)
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
