--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Niestandardowy adres URL kanoniczny (Automatic Translation)
 custom-color=Własny kolor
 custom-contact-mapping=Niestandardowe mapowanie kontaktów (Automatic Translation)
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
