--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=Anpassad kanonisk URL
 custom-color=Egen färg
 custom-contact-mapping=Anpassad kontaktmappning
 custom-control=Anpassad kontroll
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=Anpassad kontroll för gränsfärg
 custom-control-disabled-border-color=Anpassad kontroll inaktiverad för gränsfärg
 custom-control-hover-color=Anpassad kontroll för hovringsfärg
