--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -4318,6 +4318,7 @@ custom-canonical-url=自定義 Canonical URL
 custom-color=客製顏色
 custom-contact-mapping=自定義聯絡人映射
 custom-control=Custom Control (Automatic Copy)
+custom-control-background-color=Custom Control Background Color (Automatic Copy)
 custom-control-border-color=自定義控制邊界顏色
 custom-control-disabled-border-color=自定義控制停用邊界顏色
 custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
